--- a/varosok2.html
+++ b/varosok2.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Dunántúl</h1>
+    <ul>
+        <li>Székefehérvár</li>
+        <li>Pécs</li>
+    </ul>
 </body>
 </html>
